# SidBerry

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README-original.md  README.md  sidberry.code-workspace
.github/workflows/: build.yml  release.yml
sidfiles/: A2_Hope_3SID.sid  Bright_Eyes_2SID.sid  Quad_Core_4SID.sid  Teen_Spirit_4SID.sid
src/: SidFile.cpp  SidFile.h  gpio.cpp  gpio.h  gpioInterface.cpp  gpioInterface.h  macros.h  main.cpp  mos6502.cpp  mos6502.h  sidberry.h
src/midi/: RtMidi.cpp  asid.cpp
src/mos6502/: mos6502.cpp  mos6502.h
src/termiwin/: termiWin.c  termiWin.h
src/usbsid/: usbsid_driver.cpp  usbsid_driver.h  usbsid_macros.h
